// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItemSwitch should allow for a custom unchecked and checked icon 1`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-switch-menu-item rmd-menu-item-input-toggle rmd-menu-item-input-toggle--switch"
  id="menu-item-:r1:"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
  <div
    class="rmd-switch__track rmd-icon--after rmd-list-item__addon rmd-menu-item-input-toggle__track"
  >
    <span
      class="rmd-switch__ball rmd-menu-item-input-toggle__ball"
    />
  </div>
</li>
`;

exports[`MenuItemSwitch should allow for a custom unchecked and checked icon 2`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-switch-menu-item rmd-menu-item-input-toggle rmd-menu-item-input-toggle--switch"
  id="menu-item-:r1:"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
  <div
    class="rmd-switch__track rmd-icon--after rmd-list-item__addon rmd-menu-item-input-toggle__track"
  >
    <span
      class="rmd-switch__ball rmd-switch__ball--active rmd-menu-item-input-toggle__ball"
    />
  </div>
</li>
`;

exports[`MenuItemSwitch should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-switch-menu-item rmd-menu-item-input-toggle rmd-menu-item-input-toggle--switch"
  id="menu-item-:r0:"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <div
    class="rmd-switch__track rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__track"
  >
    <span
      class="rmd-switch__ball rmd-menu-item-input-toggle__ball"
    />
  </div>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
</li>
`;

exports[`MenuItemSwitch should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-switch-menu-item rmd-menu-item-input-toggle rmd-menu-item-input-toggle--switch custom-class-name"
  id="menu-item-:r0:"
  role="menuitemcheckbox"
  style="color: white;"
  tabindex="-1"
>
  <div
    class="rmd-switch__track rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__track"
  >
    <span
      class="rmd-switch__ball rmd-menu-item-input-toggle__ball"
    />
  </div>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
</li>
`;
